deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: xpd-report-agent
  labels:
    app.kubernetes.io/part-of: xpd-report-agent
